gedcomfy/tests/snapshots/tests__external_encoding@utf16le_specified_incorrect.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR UNICODE\r\n0 TRLR\r\n"
expression: external_encoding
input_file: gedcomfy/tests/encoding_inputs/utf16le_specified_incorrect.ged
---
Ok(
    None,
)
