gedcomfy/tests/snapshots/tests__external_encoding@utf8_assumedversion.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 7.0\r\n0 TRLR\r\n"
expression: external_encoding
input_file: gedcomfy/tests/encoding_inputs/utf8_assumedversion.ged
---
Ok(
    None,
)
