gedcomfy/tests/snapshots/tests__external_encoding@utf8_bom_malformed.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "﻿0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR UTF-8\r\n0 MALFORMED hê�ér\r\n"
expression: external_encoding
input_file: gedcomfy/tests/encoding_inputs/utf8_bom_malformed.ged
---
Ok(
    Some(
        DetectedEncoding {
            encoding: Utf8,
            reason: BOMDetected {
                bom_length: 3,
            },
        },
    ),
)
