gedcomfy/tests/snapshots/tests__external_encoding@v7_encoding_mismatch.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "��0\u0000 \u0000H\u0000E\u0000A\u0000D\u0000\r\u0000\n\u00001\u0000 \u0000G\u0000E\u0000D\u0000C\u0000\r\u0000\n\u00002\u0000 \u0000V\u0000E\u0000R\u0000S\u0000 \u00007\u0000.\u00000\u0000\r\u0000\n\u00000\u0000 \u0000T\u0000R\u0000L\u0000R\u0000\r\u0000\n\u0000"
expression: external_encoding
input_file: gedcomfy/tests/encoding_inputs/v7_encoding_mismatch.ged
---
Ok(
    Some(
        DetectedEncoding {
            encoding: Utf16LE,
            reason: BOMDetected {
                bom_length: 2,
            },
        },
    ),
)
