gedcomfy/tests/snapshots/tests__golden_files@basic_grandparent.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 _ROOT1\r\n1 _CHILD\r\n2 _GRANDCHILD gc\r\n0 _ROOT2 r\r\n"
expression: kdl
input_file: gedcomfy/tests/syntax_inputs/basic_grandparent.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "ASCII"
}
_ROOT1 {
    _CHILD {
        _GRANDCHILD "gc"
    }
}
_ROOT2 "r"
